--- a/main.html
+++ b/main.html
@@ -1,16 +1,74 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Styled Webpage</title>
+  <style>
+    :root {
+      background-color: rgb(135, 206, 235);
+    }
 
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: Arial, sans-serif;
+    }
+
+    p:first-child {
+      color: white;
+      background-color: black;
+      padding: 10px;
+    }
+
+    p:nth-child(2) {
+      /* Standard text color */
+      padding: 10px;
+    }
+
+    p:last-child {
+      color: red;
+      padding: 10px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      width: 50%;
+      padding: 10px;
+      background-color: gray;
+      margin: 5px 0;
+      font-size: 16px;
+    }
+
+    li:first-child,
+    li:last-child {
+      font-size: 22px;
+    }
+
+    li:nth-last-child(3) {
+      background-color: pink;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <article>
+    <p>First paragraph: White text on a black background</p>
+    <p>Second paragraph: Standard text color</p>
+    <p>Third paragraph: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?</p>
+  </article>
+
+  <ul>
+    <li>Item 1</li>
+    <li style="background-color: white;">Item 2</li>
+    <li style="background-color: pink;">Item 3</li>
+    <li style="background-color: white;">Item 4</li>
+    <li>Item 5</li>
+  </ul>
 
 </body>
-
 </html>
